CPG-DEV/src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>ALT_UNIT_OF_MEASURE__c</fullName>
        <label>ALT UNIT OF MEASURE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATMOSPHERE_NAME__c</fullName>
        <label>ATMOSPHERE NAME</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BASTE__c</fullName>
        <label>BASTE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BEEF_GROUPING__c</fullName>
        <label>BEEF GROUPING</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOX_SIZE_BKT__c</fullName>
        <label>BOX SIZE BKT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOX_SIZE_CODE__c</fullName>
        <label>BOX SIZE CODE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRANDED__c</fullName>
        <label>BRANDED</label>
        <picklist>
            <picklistValues>
                <fullName>Branded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unbranded</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BRAND_NAME__c</fullName>
        <label>BRAND NAME</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BTFT_INCLUSION__c</fullName>
        <label>BTFT INCLUSION</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BU_PRODUCT_SUB_TYPE_CODE__c</fullName>
        <label>BU PRODUCT SUB TYPE CODE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BU_PRODUCT_TYPE_CODE__c</fullName>
        <label>BU PRODUCT TYPE CODE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business__c</fullName>
        <globalPicklist>CargillBusiness</globalPicklist>
        <label>Business</label>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CASEtoKGConversionRate__c</fullName>
        <description>Field is created as a part of Cargill Leap Project</description>
        <label>Case &gt; Kilogram (kg) Conversion Rate</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CASEtoLBConversionRate__c</fullName>
        <description>Field is created as a part of Cargill Leap Project</description>
        <label>Case &gt; Pound (lb) Conversion Rate</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CATCH_WEIGHT_FLAG__c</fullName>
        <label>CATCH WEIGHT FLAG</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CONVERSION_FACTOR__c</fullName>
        <label>CONVERSION FACTOR</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>COOKED_STATE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>COOKED STATE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>COOKED__c</fullName>
        <label>COOKED</label>
        <picklist>
            <picklistValues>
                <fullName>Cooked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Raw</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>COOKER_RESTRICTED__c</fullName>
        <defaultValue>false</defaultValue>
        <label>COOKER RESTRICTED</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>COW_MAX_INCLUSION_PERCENT__c</fullName>
        <label>COW MAX INCLUSION PERCENT</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CUBE_ADJUSTED_WEIGHT__c</fullName>
        <label>CUBE ADJUSTED WEIGHT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Category_Application__c</fullName>
        <label>Category &amp; Application</label>
        <picklist>
            <picklistValues>
                <fullName>Value</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ConnectSpecsSystem__c</fullName>
        <formula>HYPERLINK(&quot;http://domino.meat.cargill.com/ProdSpec/SpecHome.nsf&quot;,&quot;Connect SpecHome&quot;,&quot;Connect SpecHome&quot;)</formula>
        <label>Connect Spec System</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CoreProduct__c</fullName>
        <description>Core Product &lt; Product Family &lt; Product Line &lt; Product Group &lt; Product SubGroup</description>
        <label>Core Product</label>
        <picklist>
            <picklistValues>
                <fullName>Core Product 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Core Product 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Core Product 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FRUIT PRERPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RBD BLENDED OILS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RBD SOYBEAN OILS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RBD SPECIAL OILS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAUCES/ OTHERS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SHORTENINGS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TOPPINGS/ FILLINGS</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CostMargin__c</fullName>
        <label>Cost Margin</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Criteria_Considered_for_Guidance__c</fullName>
        <label>Criteria Considered for Guidance</label>
        <picklist>
            <picklistValues>
                <fullName>Customer Name</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Level</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Classification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunity Amount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Region</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>DEFAULT_PRICING_UOM__c</fullName>
        <label>DEFAULT PRICING UOM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EAtoKGConversionRate__c</fullName>
        <description>Field is created as a part of Cargill Leap Project</description>
        <label>Each &gt; Kilogram (kg) Conversion Rate</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EAtoLBConversionRate__c</fullName>
        <description>Created for Cargill Leap Project for Task-IDCTask-0000000142</description>
        <label>Each &gt; Pound (lb) Conversion Rate</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EGG_WHITE_WEIGHT_CV__c</fullName>
        <label>EGG WHITE WEIGHT CV</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ERPNumber__c</fullName>
        <label>ERP Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enterprise__c</fullName>
        <globalPicklist>Cargill_Enterprise</globalPicklist>
        <label>Enterprise</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FRESH_FROZEN_TEMP__c</fullName>
        <label>FRESH FROZEN TEMP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FRESH_STATE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FRESH STATE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FROZEN_MAX_INCLUSION__c</fullName>
        <label>FROZEN MAX INCLUSION</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FROZEN_STATE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FROZEN STATE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FRZR_COMMODITY_CODE__c</fullName>
        <label>FRZR COMMODITY CODE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FTB_INCLUSION__c</fullName>
        <label>FTB INCLUSION</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FixedCost__c</fullName>
        <label>Fixed Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GALtoKGConversionRate__c</fullName>
        <label>Gallon &gt; Kilogram (kg) Conversion Rate</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GALtoLBConversionRate__c</fullName>
        <description>Field is created as a part of Cargill Leap Project</description>
        <label>Gallon &gt; Pound (lb) Conversion Rate</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GLOBAL_SKU_DESC__c</fullName>
        <label>GLOBAL SKU DESC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GLOBAL_SKU_NO__c</fullName>
        <label>GLOBAL SKU NO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GRADE_CODE__c</fullName>
        <label>GRADE CODE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GROUP_CODE__c</fullName>
        <label>GROUP CODE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <globalPicklist>Cargill_Group</globalPicklist>
        <label>Group</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HC_WEIGHT_CV__c</fullName>
        <label>HC WEIGHT CV</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HIERARCHY_1__c</fullName>
        <label>HIERARCHY 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPFS_CODE__c</fullName>
        <label>IPFS CODE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LEAN_BEEF_TYPE_NAME__c</fullName>
        <label>LEAN BEEF TYPE NAME</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LEGACY_BUSINESS__c</fullName>
        <label>LEGACY BUSINESS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LEGACY_CODE__c</fullName>
        <label>LEGACY CODE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LEGACY_SYSTEM__c</fullName>
        <label>LEGACY SYSTEM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LITERtoKGConversionRate__c</fullName>
        <description>Field is created as a part of Cargill Leap Project</description>
        <label>Liter &gt; Kilogram (kg) Conversion Rate</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LITERtoLBConversionRate__c</fullName>
        <description>Field is created as a part of Cargill Leap Project</description>
        <label>Liter &gt; Pound (lb) Conversion Rate</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LOB__c</fullName>
        <label>LOB</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacyRecordID__c</fullName>
        <label>Legacy Record ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MARKET_BASE_CODE__c</fullName>
        <label>MARKET BASE CODE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MATERIAL_BONE__c</fullName>
        <label>MATERIAL BONE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MATERIAL_PERMISSABLE__c</fullName>
        <label>MATERIAL PERMISSABLE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MATERIAL_SECONDARY_BRAND__c</fullName>
        <label>MATERIAL SECONDARY BRAND</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MATERIAL_SKIN__c</fullName>
        <label>MATERIAL SKIN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MATERIAL_TYPE__c</fullName>
        <label>MATERIAL TYPE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NATURAL_FALL_TRIM__c</fullName>
        <label>NATURAL FALL TRIM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NET_CASE_WT_LBS__c</fullName>
        <label>NET CASE WT LBS</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NIELSEN_SUBCATEGORY__c</fullName>
        <label>NIELSEN SUBCATEGORY</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderLeadTime__c</fullName>
        <label>Order Lead Time (Days)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PACKAGE_SIZE_BKT__c</fullName>
        <label>PACKAGE SIZE BKT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PACKAGE_SIZE__c</fullName>
        <label>PACKAGE SIZE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PACKAGE_TYPE__c</fullName>
        <label>PACKAGE TYPE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PIECE_FORM_TYPE_NAME__c</fullName>
        <label>PIECE FORM TYPE NAME</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PIECE_WEIGHT__c</fullName>
        <label>PIECE WEIGHT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PREMIUM__c</fullName>
        <label>PREMIUM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRICING_METRIC__c</fullName>
        <label>PRICING METRIC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRODUCT_FAMILY2__c</fullName>
        <label>PRODUCT FAMILY2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRODUCT_FAMILY__c</fullName>
        <label>PRODUCT FAMILY</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRODUCT_GROUP__c</fullName>
        <label>PRODUCT GROUP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRODUCT_HIER_1_DESC__c</fullName>
        <label>PRODUCT HIER 1 DESC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRODUCT_HIER_1__c</fullName>
        <label>PRODUCT HIER 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRODUCT_HIER_2_DESC__c</fullName>
        <label>PRODUCT HIER 2 DESC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRODUCT_HIER_2__c</fullName>
        <label>PRODUCT HIER 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRODUCT_HIER_3_DESC__c</fullName>
        <label>PRODUCT HIER 3 DESC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRODUCT_HIER_3__c</fullName>
        <label>PRODUCT HIER 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRODUCT_LINE_GROUP__c</fullName>
        <label>PRODUCT LINE GROUP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRODUCT_LINE__c</fullName>
        <label>PRODUCT LINE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRODUCT_PRIMAL__c</fullName>
        <label>PRODUCT PRIMAL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRODUCT_SUB_GROUP__c</fullName>
        <label>PRODUCT SUB GROUP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRODUCT_SUB_PRIMAL_DESC__c</fullName>
        <label>PRODUCT SUB PRIMAL DESC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRODUCT_TYPE_CODE__c</fullName>
        <label>PRODUCT TYPE CODE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROD_GUIDANCE_ROLLUP__c</fullName>
        <label>PROD GUIDANCE ROLLUP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROD_SPECIES_CODE__c</fullName>
        <label>PROD SPECIES CODE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PUMP__c</fullName>
        <label>PUMP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PackType__c</fullName>
        <label>Pack Type</label>
        <picklist>
            <picklistValues>
                <fullName>Tote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jib</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BALDE 20 KG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BARRICA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAG BOX 1000 KG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GRANEL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONTAINER 1000KG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAIXA COM 6 UNIDADES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BALDE 4,0 KG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAIXA 24 KG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TAMBOR 180KG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAIXA 20KG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BALDE 15,0 kg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BIB BAG 900KG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAIXA 18 kg(6x3kg)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BALDE 14,5 kg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BALDE</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PackWeightQuantityImperial__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Pack Weight Quantity (Imperial)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PackWeightQuantityMetric__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Pack Weight Quantity (Metric)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PackWeightUnitOfMeasureImperial__c</fullName>
        <globalPicklist>UnitOfMeasureImperial</globalPicklist>
        <label>Pack Weight Unit of Measure (Imperial)</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PackWeightUnitOfMeasureMetric__c</fullName>
        <globalPicklist>UnitOfMeasureMetric</globalPicklist>
        <label>Pack Weight Unit of Measure (Metric)</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ParentProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProductEndDate__c</fullName>
        <label>Product End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ProductGroup__c</fullName>
        <description>Core Product &lt; Product Family &lt; Product Line &lt; Product Group &lt; Product SubGroup</description>
        <label>Product Group</label>
        <picklist>
            <picklistValues>
                <fullName>Product Group 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Group 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CANOLA BULK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHEESE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DESSERT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FROZEN DESSERT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GIRASSOL BULK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HOSO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HYDRO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MILHO BULK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OTHERS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RBD COTTON</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RBD-MIX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RBD-MIX PULS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RBDMIX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RBDMIX PULS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAUCES, DRESSINGS AND CONDIMENTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOJA BULK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SWEET GOODS (Cakes/Muff/Donuts)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YOGURT</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ProductLine__c</fullName>
        <description>Core Product &lt; Product Family &lt; Product Line &lt; Product Group &lt; Product SubGroup</description>
        <label>Product Line</label>
        <picklist>
            <picklistValues>
                <fullName>Product Line 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Line 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL BAKE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL BAKEFILLING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL CONF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL FRY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL HOME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL LETTE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LEVIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LEVIA+E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LIZA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PREP SYSTEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAMPLE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAUCE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SWEET FILLINGS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TAILORMADE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TOPPINGS</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ProductStartDate__c</fullName>
        <label>Product Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ProductSubGroup__c</fullName>
        <description>Core Product &lt; Product Family &lt; Product Line &lt; Product Group &lt; Product SubGroup</description>
        <label>Product SubGroup</label>
        <picklist>
            <picklistValues>
                <fullName>Product SubGroup1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product SubGroup2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GEOS FI - Exportação</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GEOS FI - F&amp;O</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GEOS FI - Specialties</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ProductUnitsPerPack__c</fullName>
        <label>Product Units per Pack</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProductWeightQuantityImperial__c</fullName>
        <label>Product Weight Quantity (Imperial)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProductWeightQuantityMetric__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Product Weight Quantity (Metric)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProductWeightUnitOfMeasureImperial__c</fullName>
        <globalPicklist>UnitOfMeasureImperial</globalPicklist>
        <label>Product Weight Unit of Measure(Imperial)</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ProductWeightUnitOfMeasureMetric__c</fullName>
        <globalPicklist>UnitOfMeasureMetric</globalPicklist>
        <label>Product Weight Unit of Measure (Metric)</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Deployment__c</fullName>
        <description>Deployment Status of Product</description>
        <inlineHelpText>Deployment Status of Product</inlineHelpText>
        <label>Product Deployment</label>
        <picklist>
            <picklistValues>
                <fullName>Placeholder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Production</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deprecated</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RMGROUP__c</fullName>
        <label>RMGROUP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RemainingVolume__c</fullName>
        <label>Remaining Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SIMILAR_SKU_GROUP__c</fullName>
        <label>SIMILAR SKU GROUP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIZE_CD__c</fullName>
        <label>SIZE CD</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SKU_DESCRIPTION__c</fullName>
        <label>SKU DESCRIPTION</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SKU_NO__c</fullName>
        <label>SKU NO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SKU__c</fullName>
        <label>SKU</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SOP_HIER1__c</fullName>
        <label>SOP HIER1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SOP_HIER2__c</fullName>
        <label>SOP HIER2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SOP_HIER3__c</fullName>
        <label>SOP HIER3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SOP_HIER_DESC1__c</fullName>
        <label>SOP HIER DESC1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SOP_HIER_DESC2__c</fullName>
        <label>SOP HIER DESC2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SOP_HIER_DESC3__c</fullName>
        <label>SOP HIER DESC3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SOURCE_LEAN_POINT__c</fullName>
        <label>SOURCE LEAN POINT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPECIES__c</fullName>
        <label>SPECIES</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STATUS__c</fullName>
        <label>STATUS</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SUBGRPDETAIL__c</fullName>
        <label>SUBGRPDETAIL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TYPE__c</fullName>
        <label>TYPE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalCost__c</fullName>
        <formula>FixedCost__c +  VariableCost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UNIQUE_PRODUCT_ID__c</fullName>
        <label>UNIQUE PRODUCT ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC__c</fullName>
        <label>UPC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VariableCost__c</fullName>
        <label>Variable Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WHOLE_EGG_WEIGHT_CV__c</fullName>
        <label>WHOLE EGG WEIGHT CV</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YIELD_LEAN_PERCENTAGE__c</fullName>
        <label>YIELD LEAN PERCENTAGE</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>